Finition html/css pour page 1/8

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2>Olivier.</h2>
         <p><img src="image/telephone.svg" alt="icone telephone">+98 76-54-1423</p>
         <p><img src="image/mail.svg" alt="icone mail">olivier.depiesse@gmail.com</p>
+        <p id="menu"><img src="image/menu.svg" alt="icone du menu deroulant"></p>
     </header>
     <div class="container">
         <div class="box">
