--- a/index.html
+++ b/index.html
@@ -43,7 +43,32 @@
                 </div>
             </div>
             <div class="services">
-
+                <div class="skill">
+                    <h2>Compétences</h2>
+                    <p>It doesn't matter how great your product or service is if your copy does not captivate your audience.</p>
+                </div>
+                <div class="tableau">
+                    <div id="col">
+                        <img src="image/technique.svg" alt="">
+                        <h3>Technique</h3>
+                        <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                    </div>
+                    <div id="col">
+                        <img src="image/gestion.svg" alt="">
+                        <h3>Gestion de projet</h3>
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                    </div>
+                    <div id="col">
+                        <img src="image/management.svg" alt="">
+                        <h3>Management</h3>
+                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                    </div>
+                    <div id="col">
+                        <img src="image/langue.svg" alt="">
+                        <h3>Langues</h3>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                    </div>
+                </div>
             </div>
             <div class="portfolio">
 
