--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h2>Hola, mi nombre es <span>Olivier.</span></h2>
                     <p>Développement : Environnement LAMP, Zend Framework, ExtJS, Webservices, AMFPHP, API Google Maps, Facebook Open Graph, API Twitter</p>
                     <p>Directeur technique Webedia Madrid</p>
-                    <p><a href="/">Portfolio</a><a href="">Contact</a></p>
+                    <p><a id="rouge" href="/">Portfolio</a><a href="">Contact</a></p>
                 </div>
                 <div class="image">
                     <img src="image/olivier.png" width="765" height="526" alt="portait d'olivier">
@@ -44,27 +44,27 @@
             </div>
             <div class="services">
                 <div class="skill">
-                    <h2>Compétences</h2>
+                    <h2>Com<span>péte</span>nces</h2>
                     <p>It doesn't matter how great your product or service is if your copy does not captivate your audience.</p>
                 </div>
                 <div class="tableau">
                     <div id="col">
-                        <img src="image/technique.svg" alt="">
+                        <img src="image/technique.svg" width="20" height="20" alt="">
                         <h3>Technique</h3>
                         <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
                     </div>
                     <div id="col">
-                        <img src="image/gestion.svg" alt="">
+                        <img src="image/gestion.svg" width="20" height="20" alt="">
                         <h3>Gestion de projet</h3>
                         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
                     </div>
                     <div id="col">
-                        <img src="image/management.svg" alt="">
+                        <img src="image/management.svg" width="20" height="20" alt="">
                         <h3>Management</h3>
                         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                     </div>
                     <div id="col">
-                        <img src="image/langue.svg" alt="">
+                        <img src="image/langue.svg" width="20" height="20" alt="">
                         <h3>Langues</h3>
                         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                     </div>
