--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="acceuil">
                 <div class="text">
                     <p>JE SUIS FULLSTACK DESIGNER</p>
-                    <h2>Hola, mi nombre es <span>Olivier.</span></h2>
+                    <h1>Hola, mi nombre es <span>Olivier.</span></h1>
                     <p>Développement : Environnement LAMP, Zend Framework, ExtJS, Webservices, AMFPHP, API Google Maps, Facebook Open Graph, API Twitter</p>
                     <p>Directeur technique Webedia Madrid</p>
                     <p><a id="rouge" href="/">Portfolio</a><a href="">Contact</a></p>
@@ -33,12 +33,12 @@
                 <div class="client">
                     <p>CLIENTS</p>
                     <div class="logo">
-                        <img src="image/sega.svg" alt="logo sega">
-                        <img src="image/ubisoft.svg" alt="logo ubisoft">
-                        <img src="image/microsoft.svg" alt="logo microsoft">
-                        <img src="image/electronic_arts.svg" alt="logo electronic arts">
-                        <img src="image/capcom.svg" alt="logo capcom">
-                        <img src="image/bethesda.svg" alt="logo bethesda">
+                        <img src="image/sega.svg" width="109" height="36.36" alt="logo sega">
+                        <img src="image/ubisoft.svg" width="73.45" height="67.48" alt="logo ubisoft">
+                        <img src="image/microsoft.svg" width="205.31" height="92.02" alt="logo microsoft">
+                        <img src="image/electronic_arts.svg" width="167.11" height="94" alt="logo electronic arts">
+                        <img src="image/capcom.svg" width="131.2" height="24.02" alt="logo capcom">
+                        <img src="image/bethesda.svg" width="158.57" height="22.99" alt="logo bethesda">
                     </div>
                 </div>
             </div>
@@ -71,7 +71,18 @@
                 </div>
             </div>
             <div class="portfolio">
-
+                <div class="textportfolio">
+                    <h2><span>Port</span>folio</h2>
+                    <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem, It doesn’t matter how great your product or service is if your copy does not captivate your audience.</p>
+                </div>
+                <div class="imageportfolio">
+                    <img src="image/astronaute.png" width="480" height="263" alt="container avec astonaute en fond">
+                    <img src="image/bureaux.png" width="227" height="266" alt="bureau de travail">
+                    <img src="image/hello.png" width="227" height="264" alt="pot de peinture verte avec bouteille ou est ecrit hello ">
+                    <img src="image/waterbox.png" width="479" height="264" alt="brique d'eau blanche avec inscription noire">
+                    <img src="image/writing.png" width="347" height="264" alt="machine a ecrire en premier plan">
+                    <img src="image/blue.png" width="359" height="264" alt="citron vert couper en deux">
+                </div>
             </div>
             <div class="experience">
 
