--- a/index.html
+++ b/index.html
@@ -85,7 +85,26 @@
                 </div>
             </div>
             <div class="experience">
-
+                <div class="experiencetext">
+                    <h2><span>Exp</span>erience</h2>
+                    <p id="descriptionexperience">Necessitatibus eius consequatur ex aliquid fuga eum quidem, It doesn't matter how great your product or service is if your copy does not captivate your audience.</p>
+                    <p><a id="rouge" href="">Download Resume</a></p>
+                </div>
+                <div class="experiencetableau">
+                    <div class="experiencedate">
+                        <p><img src="image/icone_ecran.svg" alt="">AUJOURD'HUI</p>
+                        <h3>Web Developper</h3>
+                        <p><img src="image/icone_ba.svg" alt="">MAI 2010 - AVRIL 2021</p>
+                        <h3>Directeur de projet Web</h3>
+                        <p><img src="image/icone_fenetre.svg" alt="">SEPT 2008 - MAI 2009</p>
+                        <h3>Web Developper</h3>
+                    </div>
+                    <div class="experiencedescription">
+                        <p>Au sein du pôle R+D, développement et amélioration du framework maison et du backoffice. Création d'un outil d'analyse des logs d'accès crawlers</p>
+                        <p>Mise en place de la méthodologie et des processus de développement - SVN, Trac, Hudson</p>
+                        <p>Création de sites et de jeux concours principalement dans le domaine des jeux vidéos : Sega, Ubisoft, Microsoft, Electronic Arts, Capcom, Bethesda</p>
+                    </div>
+                </div>    
             </div>
             <div class="compétences">
 
