--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="box">
             <div class="acceuil">
                 <div class="text">
-                    <p>JE SUIS FULLSTACK DESIGNER</p>
+                    <p><span>JE SUIS</span> FULLSTACK DESIGNER</p>
                     <h1>Hola, mi nombre es <span>Olivier.</span></h1>
                     <p>Développement : Environnement LAMP, Zend Framework, ExtJS, Webservices, AMFPHP, API Google Maps, Facebook Open Graph, API Twitter</p>
                     <p>Directeur technique Webedia Madrid</p>
@@ -92,11 +92,11 @@
                 </div>
                 <div class="experiencetableau">
                     <div class="experiencedate">
-                        <p><img src="image/icone_ecran.svg" alt="">AUJOURD'HUI</p>
+                        <p><img src="image/icone_ecran.svg" width="24" height="24"alt="">AUJOURD'HUI</p>
                         <h3>Web Developper</h3>
-                        <p><img src="image/icone_ba.svg" alt="">MAI 2010 - AVRIL 2021</p>
+                        <p><img src="image/icone_ba.svg"  width="24" height="24" alt="">MAI 2010 - AVRIL 2021</p>
                         <h3>Directeur de projet Web</h3>
-                        <p><img src="image/icone_fenetre.svg" alt="">SEPT 2008 - MAI 2009</p>
+                        <p><img src="image/icone_fenetre.svg"  width="24" height="24" alt="">SEPT 2008 - MAI 2009</p>
                         <h3>Web Developper</h3>
                     </div>
                     <div class="experiencedescription">
@@ -107,7 +107,27 @@
                 </div>    
             </div>
             <div class="compétences">
-
+                <div class="imagecompétences">
+                    <div class="block">
+                        <p id="Angular"><img src="image/angular.svg"  width="22.32" height="24" alt="logo angular">Angular <span>80%</span></p>
+                        <p id="React"><img src="image/react.svg" width="24" height="24" alt="logo React">React <span>90%</span></p>
+                    </div>
+                    <div class="block">
+                        <p id="NodeJS"><img src="image/nodejs.svg" width="24" height="24" alt="logo Node JS">Node JS <span>60%</span></p>
+                        <p id="Management"><img src="image/compmanagement.svg" width="24" height="24" alt="logo Management">Management <span>70%</span></p>
+                    </div>
+                    <div class="block">
+                        <p id="Analytics"><img src="image/analytics.svg" width="24" height="24" alt="logo Analytics">Analytics <span>90%</span></p>
+                        <p id="Brainstroming"><img src="image/brainstroming.svg" width="24" height="24" alt="logo Brainstroming">Brainstroming <span>60%</span></p>
+                    </div>
+                    <div class="block">
+                        <p id="Execution"><img src="image/execution.svg" width="24" height="24" alt="logo Execution">Execution <span>100%</span></p>
+                    </div>
+                </div>
+                <div class="textcompétences">
+                    <h2><span>Com</span>pétences</h2>
+                    <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem, It doesn't matter how great your product or service is if your copy does not captivate your audience.</p>
+                </div>
             </div>
             <div class="temoignages">
 
