--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                     <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem, It doesn’t matter how great your product or service is if your copy does not captivate your audience.</p>
                 </div>
                 <div class="imageportfolio">
-                    <img src="image/astronaute.png" width="480" height="263" alt="container avec astonaute en fond">
-                    <img src="image/bureaux.png" width="227" height="266" alt="bureau de travail">
-                    <img src="image/hello.png" width="227" height="264" alt="pot de peinture verte avec bouteille ou est ecrit hello ">
-                    <img src="image/waterbox.png" width="479" height="264" alt="brique d'eau blanche avec inscription noire">
-                    <img src="image/writing.png" width="347" height="264" alt="machine a ecrire en premier plan">
-                    <img src="image/blue.png" width="359" height="264" alt="citron vert couper en deux">
+                    <img id="astronaute" src="image/astronaute.png" width="480" height="263" alt="container avec astonaute en fond">
+                    <img id="bureaux" src="image/bureaux.png" width="227" height="266" alt="bureau de travail">
+                    <img id="hello" src="image/hello.png" width="227" height="264" alt="pot de peinture verte avec bouteille ou est ecrit hello ">
+                    <img id="waterbox" src="image/waterbox.png" width="479" height="264" alt="brique d'eau blanche avec inscription noire">
+                    <img id="writing" src="image/writing.png" width="347" height="264" alt="machine a ecrire en premier plan">
+                    <img id="blue" src="image/blue.png" width="359" height="264" alt="citron vert couper en deux">
                 </div>
             </div>
             <div class="experience">
@@ -130,7 +130,15 @@
                 </div>
             </div>
             <div class="temoignages">
-
+                <div id="imagetemoignages">
+                    <img src="image/pouce.png" width="120" height="120" alt="portrait avec pouce en premier plan">
+                </div>
+                <div id="texttemoignages">
+                    <h2>Tém<span>oign</span>ages</h2>
+                    <p> Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, <span>aliq</span>uam eget nibh et. Maecen aliquam, risus at semper.</p>
+                    <p>Saul Goodman</p>
+                    <p>Ceo And Founder</p>
+                </div>
             </div>
             <div class="actualité">
 
