fin de la page 6/7

--- a/index.html
+++ b/index.html
@@ -130,18 +130,31 @@
                 </div>
             </div>
             <div class="temoignages">
-                <div id="imagetemoignages">
-                    <img src="image/pouce.png" width="120" height="120" alt="portrait avec pouce en premier plan">
-                </div>
                 <div id="texttemoignages">
                     <h2>Tém<span>oign</span>ages</h2>
-                    <p> Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, <span>aliq</span>uam eget nibh et. Maecen aliquam, risus at semper.</p>
+                    <div id="textimagetemoignages">
+                        <img src="image/pouce.png" width="120" height="120" alt="portrait avec pouce en premier plan">
+                        <p> Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, <span>aliq</span>uam eget nibh et. Maecen aliquam, risus at semper.</p>
+                    </div>
                     <p>Saul Goodman</p>
                     <p>Ceo And Founder</p>
                 </div>
             </div>
             <div class="actualité">
-
+                <div id="actualité-left">
+                    <h2><span>Actu</span>alités</h2>
+                </div>
+                <div id="actualité-right">
+                    <p id="date-actualité">19 AOÛT 2014</p>
+                    <p id="titreactualité">OMOTE / REAL-TIME FACE TRACKING & PROJECTION MAPPING</p>
+                    <p id="textactualité">LIVE INSTALLATION ON 2014/8/28connpass.com/event/8112/ PROJECT MEMBERS NOBUMICHI ASAI (PLANNER / PRODUCER / TECHNICAL...</p>
+                    <p id="date-actualité">08 NOVEMBRE 2013</p>
+                    <p id="titreactualité">Forest</p>
+                    <p id="textactualité">Movie : Takeshi Tsunehashi d-apartment.net - The post Forest first appeared on Yop Concept.</p>
+                    <p id="date-actualité">18 OCTOBRE 2013</p>
+                    <p id="titreactualité">Atoms For Peace - Before Your Very Eyes</p>
+                    <p id="textactualité">Vous trouverez ici le making-of<br>: http://www.youtube.com/watch?v=mfWNvhgHV3A...</p>
+                </div>
             </div>
             <div class="contact">
 
