mise en page contact-left

--- a/index.html
+++ b/index.html
@@ -157,7 +157,30 @@
                 </div>
             </div>
             <div class="contact">
-
+                <div id="contact-left">
+                    <h3>Contact.</h3>
+                    <p id="imagecontact"><img src="image/adresse-contact.svg" width="14.91" height="18" alt="icone adresse">Adresse</p>
+                    <p id="info">36 rue des Peupliers <br> Paris (75018) France</p>
+                    <p id="imagecontact"><img src="image/mail-contact.svg" width="18" height="16.36" alt="icone mail">Mail</p>
+                    <p id="info">olivier.depiesse@gmail.com</p>
+                    <p id="imagecontact"><img src="image/telephone-contact.svg" width="18" height="18" alt="icone telephone">Téléphone</p>
+                    <p id="info">06 54 84 54 75</p>
+                </div>
+                <div id="contact-right">
+                    <h3>Contactez moi</h3>
+                    <p></p>
+                    <p></p>
+                    <div id="nom">
+                        <p>Votre nom:</p>
+                    </div>
+                    <div id="email">
+                        <p>Votre email:</p>
+                    </div>
+                    <div id="message">
+                        <p>Message:</p>
+                    </div>
+                    <a href="">Envoyer</a>
+                </div>
             </div>
         </div>
     </div>
