mileux de media queries

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 <div class="client">
                     <p>CLIENTS</p>
                     <div class="logo">
-                        <img src="image/sega.svg" width="109" height="36.36" alt="logo sega">
-                        <img src="image/ubisoft.svg" width="73.45" height="67.48" alt="logo ubisoft">
-                        <img src="image/microsoft.svg" width="205.31" height="92.02" alt="logo microsoft">
-                        <img src="image/electronic_arts.svg" width="167.11" height="94" alt="logo electronic arts">
-                        <img src="image/capcom.svg" width="131.2" height="24.02" alt="logo capcom">
-                        <img src="image/bethesda.svg" width="158.57" height="22.99" alt="logo bethesda">
+                        <img src="image/sega1860w.svg" alt="logo sega" srcset="image/sega375w.svg 375w, image/sega1860w.svg 1860w" width="100%">
+                        <img src="image/ubisoft1860w.svg" alt="logo ubisoft" srcset="image/ubisoft375w.svg 375w, image/ubisoft1860w.svg 1860w" width="100%">
+                        <img src="image/microsoft1860w.svg" alt="logo microsoft" srcset="image/microsoft375w.svg 375w, image/microsoft1860w.svg 1860w" width="100%">
+                        <img src="image/electronic_arts1860w.svg" alt="logo electronic arts" srcset="image/electronic_arts375w.svg 375w,image/electronic_arts1860w.svg 1860w" width="100%">
+                        <img src="image/capcom1860w.svg"  alt="logo capcom" srcset="image/capcom375w.svg 375w, image/capcom1860w.svg 1860w" width="100%">
+                        <img src="image/bethesda1860w.svg"  alt="logo bethesda" srcset="image/bethesda375w.svg 375w, image/bethesda1860w.svg 1860w" width="100%">
                     </div>
                 </div>
             </div>
@@ -73,15 +73,15 @@
             <div class="portfolio">
                 <div class="textportfolio">
                     <h2><span>Port</span>folio</h2>
-                    <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem, It doesn’t matter how great your product or service is if your copy does not captivate your audience.</p>
+                    <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem, It doesn't matter how great your product or service is if your copy does not captivate your audience.</p>
                 </div>
                 <div class="imageportfolio">
-                    <img id="astronaute" src="image/astronaute.png" width="480" height="263" alt="container avec astonaute en fond">
-                    <img id="bureaux" src="image/bureaux.png" width="227" height="266" alt="bureau de travail">
-                    <img id="hello" src="image/hello.png" width="227" height="264" alt="pot de peinture verte avec bouteille ou est ecrit hello ">
-                    <img id="waterbox" src="image/waterbox.png" width="479" height="264" alt="brique d'eau blanche avec inscription noire">
-                    <img id="writing" src="image/writing.png" width="347" height="264" alt="machine a ecrire en premier plan">
-                    <img id="blue" src="image/blue.png" width="359" height="264" alt="citron vert couper en deux">
+                    <img id="astronaute" src="image/astronaute.png" srcset="" alt="container avec astonaute en fond" srcset="image/astronaute375w.png 375w, images/astronaute.png 1860w" width="100%">
+                    <img id="bureaux" src="image/bureaux.png"  alt="bureau de travail" srcset="image/bureaux375w.png 375w, image/bureaux.png 1860w" width="100%">
+                    <img id="hello" src="image/hello.png"  alt="pot de peinture verte avec bouteille ou est ecrit hello " srcset="image/hello375w.png 375w, image/hello.png 1860w" width="100%">
+                    <img id="waterbox" src="image/waterbox.png" alt="brique d'eau blanche avec inscription noire" srcset="image/waterbox375w.png 375w, image/waterbox.png 1860w" width="100%">
+                    <img id="writing" src="image/writing.png"  alt="machine a ecrire en premier plan" srcset="image/writing375w.png 375w, image/writing.png 1860w" width="100%">
+                    <img id="blue" src="image/blue.png"  alt="citron vert couper en deux" srcset="image/blue375w.png 375w, image/blue.png 1860w" width="100%">
                 </div>
             </div>
             <div class="experience">
@@ -153,7 +153,7 @@
                     <p id="textactualité">Movie : Takeshi Tsunehashi d-apartment.net - The post Forest first appeared on Yop Concept.</p>
                     <p id="date-actualité">18 OCTOBRE 2013</p>
                     <p id="titreactualité">Atoms For Peace - Before Your Very Eyes</p>
-                    <p id="textactualité">Vous trouverez ici le making-of<br>: http://www.youtube.com/watch?v=mfWNvhgHV3A...</p>
+                    <p id="textactualité">Vous trouverez ici le making-of: <br>http://www.youtube.com/watch?v=mfWNvhgHV3A...</p>
                 </div>
             </div>
             <div class="contact">
