Fin du projet 8
 finition du media querie du site , conversion des png en webp

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p><a id="rouge" href="/">Portfolio</a><a href="">Contact</a></p>
                 </div>
                 <div class="image">
-                    <img src="image/olivier.png" width="765" height="526" alt="portait d'olivier">
+                    <img src="image/olivier.webp" width="765" height="526" alt="portait d'olivier">
                 </div>
                 <div class="client">
                     <p>CLIENTS</p>
@@ -76,25 +76,27 @@
                     <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem, It doesn't matter how great your product or service is if your copy does not captivate your audience.</p>
                 </div>
                 <div class="imageportfolio">
-                    <img id="astronaute" src="image/astronaute.png" srcset="" alt="container avec astonaute en fond" srcset="image/astronaute375w.png 375w, images/astronaute.png 1860w" width="100%">
-                    <img id="bureaux" src="image/bureaux.png"  alt="bureau de travail" srcset="image/bureaux375w.png 375w, image/bureaux.png 1860w" width="100%">
-                    <img id="hello" src="image/hello.png"  alt="pot de peinture verte avec bouteille ou est ecrit hello " srcset="image/hello375w.png 375w, image/hello.png 1860w" width="100%">
-                    <img id="waterbox" src="image/waterbox.png" alt="brique d'eau blanche avec inscription noire" srcset="image/waterbox375w.png 375w, image/waterbox.png 1860w" width="100%">
-                    <img id="writing" src="image/writing.png"  alt="machine a ecrire en premier plan" srcset="image/writing375w.png 375w, image/writing.png 1860w" width="100%">
-                    <img id="blue" src="image/blue.png"  alt="citron vert couper en deux" srcset="image/blue375w.png 375w, image/blue.png 1860w" width="100%">
+                    <img id="astronaute" src="image/astronaute.webp" srcset="" alt="container avec astonaute en fond" srcset="image/astronaute375w.webp 375w, images/astronaute.webp 1860w" width="100%">
+                    <img id="bureaux" src="image/bureaux.webp"  alt="bureau de travail" srcset="image/bureaux375w.webp 375w, image/bureaux.webp 1860w" width="100%">
+                    <img id="hello" src="image/hello.webp"  alt="pot de peinture verte avec bouteille ou est ecrit hello " srcset="image/hello375w.webp 375w, image/hello.webp 1860w" width="100%">
+                    <img id="waterbox" src="image/waterbox.webp" alt="brique d'eau blanche avec inscription noire" srcset="image/waterbox375w.webp 375w, image/waterbox.webp 1860w" width="100%">
+                    <img id="writing" src="image/writing.webp"  alt="machine a ecrire en premier plan" srcset="image/writing375w.webp 375w, image/writing.webp 1860w" width="100%">
+                    <img id="blue" src="image/blue.webp"  alt="citron vert couper en deux" srcset="image/blue375w.webp 375w, image/blue.webp 1860w" width="100%">
                 </div>
             </div>
             <div class="experience">
                 <div class="experiencetext">
                     <h2><span>Exp</span>erience</h2>
                     <p id="descriptionexperience">Necessitatibus eius consequatur ex aliquid fuga eum quidem, It doesn't matter how great your product or service is if your copy does not captivate your audience.</p>
+                </div>
+                <div class="bouton">
                     <p><a id="rouge" href="">Download Resume</a></p>
                 </div>
                 <div class="experiencetableau">
                     <div class="experiencedate">
-                        <p><img src="image/icone_ecran.svg" width="24" height="24"alt="">AUJOURD'HUI</p>
+                        <p><img src="image/icone_ecran.svg" width="24" height="24" alt="icone d'un ecran">AUJOURD'HUI</p>
                         <h3>Web Developper</h3>
-                        <p><img src="image/icone_ba.svg"  width="24" height="24" alt="">MAI 2010 - AVRIL 2021</p>
+                        <p><img src="image/icone_ba.svg"  width="24" height="24" alt="icone d'une fenetre et les lettre ba en premiere plan">MAI 2010 - AVRIL 2021</p>
                         <h3>Directeur de projet Web</h3>
                         <p><img src="image/icone_fenetre.svg"  width="24" height="24" alt="">SEPT 2008 - MAI 2009</p>
                         <h3>Web Developper</h3>
@@ -133,7 +135,7 @@
                 <div id="texttemoignages">
                     <h2>Tém<span>oign</span>ages</h2>
                     <div id="textimagetemoignages">
-                        <img src="image/pouce.png" width="120" height="120" alt="portrait avec pouce en premier plan">
+                        <img src="image/pouce.webp" width="120" height="120" alt="portrait avec pouce en premier plan">
                         <p> Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, <span>aliq</span>uam eget nibh et. Maecen aliquam, risus at semper.</p>
                     </div>
                     <p>Saul Goodman</p>
@@ -173,21 +175,21 @@
                     <div class="formulaire">
                         <div id="nom">
                             <fieldset><legend>Votre nom:</legend>
-                            <label><textarea name="" id="" cols="30" rows=""></textarea></label>
+                            <label><textarea name="/" id="/" cols="30" rows=""></textarea></label>
                             </fieldset>
                         </div>
                         <div id="email">
                             <fieldset><legend>Votre email:</legend>
-                                <label><textarea name="" id="" cols="32" rows=""></textarea></label>
+                                <label><textarea name="/" id="/" cols="32" rows=""></textarea></label>
                             </fieldset>
                         </div>
                     </div>
                     <div id="message">
                         <fieldset><legend>Message:</legend>
-                        <label><textarea name="" id="" cols="77" rows="10"></textarea></label>
+                        <label><textarea name="/" id="/" cols="77" rows="10"></textarea></label>
                         </fieldset>
                     </div>  
-                    <a id="rouge"href="">Envoyer</a>
+                    <a id="rouge" href="">Envoyer</a>
                 </div>
             </div>
         </div>
