Optimisation de la taille des fichiers
Changement des fichiers image afin de reduire au maximum la taille des fichier

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
         <h2>Olivier.</h2>
         <p><img src="image/telephone.svg" alt="icone telephone">+98 76-54-1423</p>
         <p><img src="image/mail.svg" alt="icone mail">olivier.depiesse@gmail.com</p>
-        <p id="menu"><img srcset="image/menu375w.svg 375w, image/menu1860w.svg 1860w" width="100%" alt="icone du menu deroulant"></p>
+        <a href="#">
+            <span class="burger-icone">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </a>
     </header>
     <div class="container">
         <div class="box">
@@ -33,12 +39,12 @@
                 <div class="client">
                     <p>CLIENTS</p>
                     <div class="logo">
-                        <img src="image/sega1860w.svg" alt="logo sega" srcset="image/sega375w.svg 375w, image/sega1860w.svg 1860w" width="100%">
-                        <img src="image/ubisoft1860w.svg" alt="logo ubisoft" srcset="image/ubisoft375w.svg 375w, image/ubisoft1860w.svg 1860w" width="100%">
-                        <img src="image/microsoft1860w.svg" alt="logo microsoft" srcset="image/microsoft375w.svg 375w, image/microsoft1860w.svg 1860w" width="100%">
-                        <img src="image/electronic_arts1860w.svg" alt="logo electronic arts" srcset="image/electronic_arts375w.svg 375w,image/electronic_arts1860w.svg 1860w" width="100%">
-                        <img src="image/capcom1860w.svg"  alt="logo capcom" srcset="image/capcom375w.svg 375w, image/capcom1860w.svg 1860w" width="100%">
-                        <img src="image/bethesda1860w.svg"  alt="logo bethesda" srcset="image/bethesda375w.svg 375w, image/bethesda1860w.svg 1860w" width="100%">
+                        <img src="image/sega1860w.webp" alt="logo sega" srcset="image/sega375w.webp 375w, image/sega1860w.webp 1860w" width="100%">
+                        <img src="image/ubisoft1860w.webp" alt="logo ubisoft" srcset="image/ubisoft375w.webp 375w, image/ubisoft1860w.webp 1860w" width="100%">
+                        <img src="image/microsoft1860w.webp" alt="logo microsoft" srcset="image/microsoft375w.webp 375w, image/microsoft1860w.webp 1860w" width="100%">
+                        <img src="image/electronic_arts1860w.webp" alt="logo electronic arts" srcset="image/electronic_arts375w.webp 375w,image/electronic_arts1860w.webp 1860w" width="100%">
+                        <img src="image/capcom1860w.webp"  alt="logo capcom" srcset="image/capcom375w.webp 375w, image/capcom1860w.webp 1860w" width="100%">
+                        <img src="image/bethesda1860w.webp"  alt="logo bethesda" srcset="image/bethesda375w.webp 375w, image/bethesda1860w.webp 1860w" width="100%">
                     </div>
                 </div>
             </div>
